@@ -1,3 +1,12 @@
+2008-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix some comment typos.
+	* automake.in: Fix some comment typos.
+	* lib/Automake/Condition.pm: Likewise.
+	* lib/Automake/DisjConditions.pm: Likewise.
+	* lib/Automake/Variable.pm: Likewise.
+	* lib/Automake/tests/DisjConditions.pl: Likewise.
+
 2008-09-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/aclibobj.test: Fix race condition.
